Fixed DungeonMapRenderer to work on all floors for any room alignment, among other fixes and tweaks.